--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,3 +15,7 @@
 .toggle-btn {
   @apply [&>div::before]:translate-y-0 [&>div::before]:rotate-45 [&>div::after]:translate-y-0 [&>div::after]:-rotate-45 [&>div]:bg-transparent [&>div]:rotate-[720deg]
 }
+canvas {
+  width: 100%;
+  height: 100%;
+}
